# OLS-v1

./: .gitignore  COMPLETE.md  IMPLEMENTATION.md  LICENSE  MODAL_README.md  QUICKSTART_MODAL.md  README.md  check_markers.py  modal_setup.py  pyproject.toml  run_audit.sh  test_coverage.sh  test_finger_lakes.py  verify_overlays.py
.github/workflows/: test.yml
danby_forest/: audit.geojson
danby_forest_wide/: audit.geojson
demo_output/: audit.geojson
finger_lakes/: audit.geojson
quick_demo/: audit.geojson
quick_demo/cache/: aiohttp_cache.sqlite
quick_demo/quick_demo/: audit.geojson
src/land_audit/: __init__.py  audit.py  cameras.py  cli.py  dem.py  hydrology.py  modal_compute.py  optimize.py  report.py  scoring.py  terrain.py  viewshed.py
test_zones/: audit.geojson
tests/: conftest.py  test_cameras.py  test_integration.py  test_scoring.py  test_terrain.py
